changed all .html and added to images folder

--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@
             <h1>Erik Cribley</h1>
             <nav>
                 <a href="index.html"> About </a> |
-                <a href="contact.html"> Contact</a> |
-                <a href="portfolio.html"> Portfolio</a>
+                <a href="portfolio.html"> Portfolio</a> |
+                <a href="contact.html"> Contact</a>
             </nav>
         </header>
 
-        <div>
+        <main>
             <h2> Contact </h2>
                 <form>
                     Name <br>
@@ -26,7 +26,7 @@
                     <input type="Submit">
                 </form>
               
-        </div>
+            </main>
 
         <footer>
             Copyright
