--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
             <h1>Erik Cribley</h1>
             <nav>
                 <a href="index.html"> About </a> |
-                <a href="contact.html"> Contact</a> |
-                <a href="portfolio.html"> Portfolio</a>
+                <a href="portfolio.html"> Portfolio</a> |
+                <a href="contact.html"> Contact</a>
             </nav>
         </header>
 
-        <div>
+        <main>
             <h2> About Me </h2>
             <img src="assets/images/#" alt="picture of me">
             <p>
@@ -28,7 +28,7 @@
             <p>
                 This part too.
             </p>
-        </div>
+        </main>
 
         <footer>
             Copyright
