added styling and some positioning

--- a/contact.html
+++ b/contact.html
@@ -2,30 +2,30 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <title>Erik Cribley</title>
     </head>
     <body>
         <header>
-            <h1>Erik Cribley</h1>
-            <nav>
+            <div class="container">
+                <h1 class="header-font">Erik Cribley</h1>
+                <nav>
                 <a href="index.html"> About </a> |
                 <a href="portfolio.html"> Portfolio</a> |
                 <a href="contact.html"> Contact</a>
-            </nav>
+                </nav>
+            </div>
         </header>
 
         <main>
-            <h2> Contact </h2>
-                <form>
+            <h2 class="header-font"> Contact </h2>
                     Name <br>
                     <input type="text"> <br>
                     Email <br>
                     <input type="text"> <br>
                     Message <br>
                     <textarea></textarea> <br>
-                    <input type="Submit">
-                </form>
-              
+                    <input type="Submit">              
             </main>
 
         <footer>
