--- a/portfolio.html
+++ b/portfolio.html
@@ -2,20 +2,23 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <title>Erik Cribley</title>
     </head>
     <body>
         <header>
-            <h1>Erik Cribley</h1>
-            <nav>
-                <a href="index.html"> About </a> |
-                <a href="portfolio.html"> Portfolio</a> |
-                <a href="contact.html"> Contact</a> 
-            </nav>
+            <div class="container">
+                <h1 class="header-font">Erik Cribley</h1>
+                <nav>
+                    <a href="index.html"> About </a> |
+                    <a href="portfolio.html"> Portfolio</a> |
+                    <a href="contact.html"> Contact</a>
+                </nav>
+            </div>
         </header>
 
         <main>
-            <h2> Portfolio </h2>
+            <h2 class="header-font"> Portfolio </h2>
             <img src="assets/images/angry-cat.jpg" alt="placeholder image">  
              <div> Project 1</div>
             <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
