--- a/index.html
+++ b/index.html
@@ -2,32 +2,32 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <title>Erik Cribley</title>
     </head>
     <body>
         <header>
-            <h1>Erik Cribley</h1>
-            <nav>
-                <a href="index.html"> About </a> |
-                <a href="portfolio.html"> Portfolio</a> |
-                <a href="contact.html"> Contact</a>
-            </nav>
+            <div class="container">
+                <h1 class="header-font">Erik Cribley</h1>
+                <nav>
+                    <a href="index.html"> About </a> |
+                    <a href="portfolio.html"> Portfolio</a> |
+                    <a href="contact.html"> Contact</a>
+                </nav>
+            </div>
         </header>
 
         <main>
-            <h2> About Me </h2>
-            <img src="assets/images/#" alt="picture of me">
-            <p>
+            <h2 class="header-font"> About Me </h2>
+            <img class="bio-pic" src="assets/images/bio-pic.jpg" alt="picture of me">
+          
                This is a bio about me. It is currently placeholder text. Eventually it will actually be about me, 
                but for now I need to move on to other parts of this assignment. I'll go back and make it about me later,
                I swear it. 
-            </p>
-            <p>
+            <br> <br>
                 This part will be about me too.
-            </p>
-            <p>
+            <br> <br>
                 This part too.
-            </p>
         </main>
 
         <footer>
