fixed capitalization error

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <main>
             <h2 class="header-font"> About Me </h2>
-            <img class="bio-pic" src="assets/images/bio-pic.jpg" alt="picture of me">
+            <img class="bio-pic" src="assets/images/bio-pic.JPG" alt="picture of me">
           
                This is a bio about me. It is currently placeholder text. Eventually it will actually be about me, 
                but for now I need to move on to other parts of this assignment. I'll go back and make it about me later,
