changed header and footer

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             </main>
 
         <footer>
-            Copyright
+            Copyright &copy;
         </footer>
     </body>
 </html>
