added sticky footer

--- a/index.html
+++ b/index.html
@@ -6,30 +6,32 @@
         <title>Erik Cribley</title>
     </head>
     <body>
-        <header>
-            <div class="container">
-                <h1 class="header-font">Erik Cribley</h1>
-                <nav>
-                    <a href="index.html"> About </a> |
-                    <a href="portfolio.html"> Portfolio</a> |
-                    <a href="contact.html"> Contact</a>
-                </nav>
-            </div>
-        </header>
+        <div class="wrapper">
+            <header>
+                <div class="container">
+                    <h1 class="header-font">Erik Cribley</h1>
+                    <nav>
+                        <a href="index.html"> About </a> |
+                        <a href="portfolio.html"> Portfolio</a> |
+                        <a href="contact.html"> Contact</a>
+                    </nav>
+                </div>
+            </header>
 
-        <main>
-            <h2 class="header-font"> About Me </h2>
-            <img class="bio-pic" src="assets/images/bio-pic.jpg" alt="picture of me">
+            <main>
+                <h2 class="header-font"> About Me </h2>
+                <img class="bio-pic" src="assets/images/bio-pic.jpg" alt="picture of me">
           
-               This is a bio about me. It is currently placeholder text. Eventually it will actually be about me, 
-               but for now I need to move on to other parts of this assignment. I'll go back and make it about me later,
-               I swear it. 
-            <br> <br>
-                This part will be about me too.
-            <br> <br>
-                This part too.
-        </main>
-        
+                   This is a bio about me. It is currently placeholder text. Eventually it will actually be about me, 
+                   but for now I need to move on to other parts of this assignment. I'll go back and make it about me later,
+                   I swear it. 
+                <br> <br>
+                    This part will be about me too.
+                <br> <br>
+                    This part too.
+            </main>
+        <div class="push"></div>
+        </div>
         <footer>
             Copyright &copy;
         </footer>
