--- a/contact.html
+++ b/contact.html
@@ -6,28 +6,30 @@
         <title>Erik Cribley</title>
     </head>
     <body>
-        <header>
-            <div class="container">
-                <h1 class="header-font">Erik Cribley</h1>
-                <nav>
-                <a href="index.html"> About </a> |
-                <a href="portfolio.html"> Portfolio</a> |
-                <a href="contact.html"> Contact</a>
-                </nav>
-            </div>
-        </header>
+        <div class="wrapper">
+            <header>
+                <div class="container">
+                    <h1 class="header-font">Erik Cribley</h1>
+                    <nav>
+                    <a href="index.html"> About </a> |
+                    <a href="portfolio.html"> Portfolio</a> |
+                    <a href="contact.html"> Contact</a>
+                    </nav>
+                </div>
+            </header>
 
-        <main>
-            <h2 class="header-font"> Contact </h2>
-                    Name <br>
-                    <input type="text"> <br>
-                    Email <br>
-                    <input type="text"> <br>
-                    Message <br>
-                    <textarea></textarea> <br>
-                    <input type="Submit">              
+            <main>
+                <h2 class="header-font"> Contact </h2>
+                        Name <br>
+                        <input type="text"> <br>
+                        Email <br>
+                        <input type="text"> <br>
+                        Message <br>
+                        <textarea></textarea> <br>
+                        <input type="Submit">              
             </main>
-
+        <div class="push"></div>
+        </div>
         <footer>
             Copyright &copy;
         </footer>
