--- a/portfolio.html
+++ b/portfolio.html
@@ -6,33 +6,35 @@
         <title>Erik Cribley</title>
     </head>
     <body>
-        <header>
-            <div class="container">
-                <h1 class="header-font">Erik Cribley</h1>
-                <nav>
-                    <a href="index.html"> About </a> |
-                    <a href="portfolio.html"> Portfolio</a> |
-                    <a href="contact.html"> Contact</a>
-                </nav>
-            </div>
-        </header>
+        <div class="wrapper">
+            <header>
+                <div class="container">
+                    <h1 class="header-font">Erik Cribley</h1>
+                    <nav>
+                        <a href="index.html"> About </a> |
+                        <a href="portfolio.html"> Portfolio</a> |
+                        <a href="contact.html"> Contact</a>
+                    </nav>
+                </div>
+            </header>
 
-        <main>
-            <h2 class="header-font"> Portfolio </h2>
-            <img src="assets/images/angry-cat.jpg" alt="placeholder image">  
-             <div> Project 1</div>
-            <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
-            <div> Project 2</div>
-            <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
-            <div> Project 3</div>
-            <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
-            <div> Project 4</div>
-            <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
-            <div> Project 5</div>
-            <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
-            <div> Project 6</div>
-        </main>
-
+            <main>
+                <h2 class="header-font"> Portfolio </h2>
+                <img src="assets/images/angry-cat.jpg" alt="placeholder image">  
+                 <div> Project 1</div>
+                <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
+                <div> Project 2</div>
+                <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
+                <div> Project 3</div>
+                <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
+                <div> Project 4</div>
+                <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
+                <div> Project 5</div>
+                <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
+                <div> Project 6</div>
+            </main>
+        <div class="push"></div>
+        </div>
         <footer>
             Copyright &copy;
         </footer>
