updated index.html and contact.html

--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,15 @@
 
             <main>
                 <h2 class="header-font"> Contact </h2>
-                        Name <br>
-                        <input type="text"> <br>
-                        Email <br>
-                        <input type="text"> <br>
-                        Message <br>
-                        <textarea></textarea> <br>
-                        <input type="Submit">              
+                <div class="form">
+                    Name <br>
+                    <input type="text"> <br> <br>
+                    Email <br>
+                    <input type="text"> <br> <br>
+                    Message <br>
+                    <textarea></textarea> <br> <br>
+                    <input type="Submit"> 
+                </div>                 
             </main>
         <div class="push"></div>
         </div>
