--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
             <main>
                 <h2 class="header-font"> About Me </h2>
                 <img class="bio-pic" src="assets/images/bio-pic.jpg" alt="picture of me">
-          
-                   This is a bio about me. It is currently placeholder text. Eventually it will actually be about me, 
-                   but for now I need to move on to other parts of this assignment. I'll go back and make it about me later,
-                   I swear it. 
-                <br> <br>
-                    This part will be about me too.
-                <br> <br>
-                    This part too.
+                   <p>
+                    This is soon to be my portfolio page. It is empty now, but only because I haven't done anything yet. 
+                    Give me about six months and it'll be bursting with projects demonstrating my new found aptitude in the
+                    field of Full Stack Development. Return in the future and marvel at my code!
+                    <br> <br>
+                    When you return you should hire me. I can be reached via the contact page, which in the future will have 
+                    functionality in addition to aesthetically pleasing design. Helping me escape the fifty-plus hour a week drudgery
+                    of driving a tow motor around a warehouse will earn you my eternal gratitude. You can't put a price on eternal 
+                    gratitude!
+                    <br> <br>
+                    Or e-mail me at ErikCribley@gmail.com. Gmail works now and in the future.
+                    </p>
             </main>
         <div class="push"></div>
         </div>
