--- a/portfolio.html
+++ b/portfolio.html
@@ -20,18 +20,26 @@
 
             <main>
                 <h2 class="header-font"> Portfolio </h2>
-                <img src="assets/images/angry-cat.jpg" alt="placeholder image">  
-                 <div> Project 1</div>
-                <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
-                <div> Project 2</div>
-                <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
-                <div> Project 3</div>
-                <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
-                <div> Project 4</div>
-                <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
-                <div> Project 5</div>
-                <img src="assets/images/angry-cat.jpg" alt="placeholder image">   
-                <div> Project 6</div>
+                    <div class="frame">
+                        <img src="assets/images/angry-cat.jpg" alt="angry cat">  
+                        <h3>Project 1</h3>
+                    </div>
+                    <div class="frame">
+                        <img src="assets/images/angry-cat.jpg" alt="angry cat">  
+                        <h3>Project 2</h3>
+                        </div>
+                    <div class="frame">
+                        <img src="assets/images/angry-cat.jpg" alt="angry cat">  
+                        <h3>Project 3</h3>
+                        </div>
+                    <div class="frame">
+                        <img src="assets/images/angry-cat.jpg" alt="angry cat">  
+                        <h3>Project 4</h3>
+                        </div>
+                    <div class="frame">
+                        <img src="assets/images/angry-cat.jpg" alt="angry cat">  
+                        <h3>Project 5</h3>
+                        </div>    
             </main>
         <div class="push"></div>
         </div>
