final tweaks and alterations

--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,12 @@
             <main>
                 <h2 class="header-font"> Contact </h2>
                 <div class="form">
-                    Name <br>
-                    <input type="text"> <br> <br>
-                    Email <br>
-                    <input type="text"> <br> <br>
-                    Message <br>
-                    <textarea></textarea> <br> <br>
+                    Name
+                    <input type="text">
+                    Email
+                    <input type="text">
+                    Message
+                    <textarea></textarea>
                     <input type="Submit"> 
                 </div>                 
             </main>
