added link in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,11 @@
 
             <main>
                 <h2 class="header-font"> Portfolio </h2>
-                    <div class="frame">
-                        <img src="assets/images/angry-cat.jpg" alt="angry cat">  
-                        <h3>Project 1</h3>
-                    </div>
+                    <a href="https://erikcribley.github.io/Word-Guess-Game/index.html"> 
+                    <div class="frame">           
+                        <img src="assets/images/angry-cat.jpg" alt="angry cat">
+                        <h3>Word Guess</h3>
+                    </div> </a>
                     <div class="frame">
                         <img src="assets/images/angry-cat.jpg" alt="angry cat">  
                         <h3>Project 2</h3>
