--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,11 @@
                         <img src="assets/images/angry-cat.jpg" alt="angry cat">
                         <h3>Word Guess</h3>
                     </div> </a>
+                    <a href="https://erikcribley.github.io/unit-4-game/index.html">
                     <div class="frame">
                         <img src="assets/images/angry-cat.jpg" alt="angry cat">  
-                        <h3>Project 2</h3>
-                        </div>
+                        <h3>Crystal Game</h3>
+                        </div> </a>
                     <div class="frame">
                         <img src="assets/images/angry-cat.jpg" alt="angry cat">  
                         <h3>Project 3</h3>
